--- a/trigram.ipynb
+++ b/trigram.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 4,
    "id": "3c18e221-e521-4beb-a3e4-2eb6f1a8e53f",
    "metadata": {},
    "outputs": [],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 5,
    "id": "256673df-7eca-4cab-a96c-b391f2d800f9",
    "metadata": {},
    "outputs": [],
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 6,
    "id": "370962f2-d6ff-4900-ac21-5e9eb7c3dd52",
    "metadata": {},
    "outputs": [
@@ -156,7 +156,7 @@
        "         [  4,  13,   0,  ...,   0,   7,   0]]], dtype=torch.int32)"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 7,
    "id": "7934017e-f32b-4467-b9de-3da0007a56d2",
    "metadata": {},
    "outputs": [],
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 8,
    "id": "ecfc882d-68e7-4165-9c30-4f7a9f84eaa7",
    "metadata": {},
    "outputs": [
@@ -188,7 +188,7 @@
        "         0.,  1.,  0.,  0.,  0.,  0.,  0.,  1.,  0.,  0.,  0.,  7.,  0.])"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "id": "24aeafb2-b8c9-48e3-9441-cf8b40d0963e",
    "metadata": {},
    "outputs": [],
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 10,
    "id": "94e1d298-4c4a-4701-b977-b85f0c4b19e2",
    "metadata": {},
    "outputs": [
@@ -219,7 +219,7 @@
        "tensor(289.)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 11,
    "id": "31127eda-ba65-40df-80ed-431f72d4215d",
    "metadata": {},
    "outputs": [
@@ -240,7 +240,7 @@
        "tensor(1558.)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 12,
    "id": "f51ac997-b095-47e5-9447-1e5a5fdfc4db",
    "metadata": {},
    "outputs": [
@@ -261,7 +261,7 @@
        "0.18549422336328628"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "id": "ef851ca4-0d28-48d2-802f-003ed8b2664c",
    "metadata": {},
    "outputs": [
@@ -282,7 +282,7 @@
        "torch.Size([27, 27, 1])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
    "id": "d7421272-e784-439f-9cd6-65972909163a",
    "metadata": {},
    "outputs": [
@@ -303,7 +303,7 @@
        "torch.Size([27, 27, 27])"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 15,
    "id": "f10ca077-b162-4f55-b28f-897cd1346485",
    "metadata": {},
    "outputs": [
@@ -351,7 +351,7 @@
        " '.': 0}"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,7 +362,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 45,
+   "id": "a94a717f-a120-4129-b607-4899679913f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0.0002, 0.0469, 0.0430, 0.0072, 0.0827, 0.0126, 0.0050, 0.0041, 0.0207,\n",
+       "        0.0349, 0.0063, 0.0171, 0.1427, 0.0868, 0.1406, 0.0025, 0.0041, 0.0023,\n",
+       "        0.1089, 0.0439, 0.0165, 0.0345, 0.0550, 0.0016, 0.0063, 0.0392, 0.0345])"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "P[0,1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "id": "4a7edb63-fb9b-42ee-9349-b1619a33785b",
    "metadata": {},
    "outputs": [
@@ -413,75 +436,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "c2a7bb39-e062-469e-8dfd-179a53b004ad",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor(0.1855)"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "P[0,5,13]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "id": "e0ae55c9-1733-4b6f-a720-9954e48e6bec",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "10"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "g = torch.Generator().manual_seed(2147483647)\n",
-    "ix = torch.multinomial(P[0,0], num_samples=1, replacement=True, generator=g).item()\n",
-    "ix"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "id": "1a003a90-c99c-4ed9-b4b0-ccd8a7ed1eb4",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([  1.,  24.,  16.,   5.,  81.,  10.,  11.,   7.,  10.,  55.,   4.,   9.,\n",
-       "        489., 289.,  61.,   5.,   9.,   1.,  91.,  94.,  21.,  22., 155.,   5.,\n",
-       "          5.,  25.,  53.])"
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "P[0,5]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "91dbd88c-c618-487f-9898-0f7fccbaa18d",
+   "id": "ed0d3121-4aea-4bc0-8799-f21b7e673406",
    "metadata": {},
    "outputs": [],
    "source": []
