--- a/bigram2.ipynb
+++ b/bigram2.ipynb
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 6,
    "id": "ba083581-6da3-4a57-8d20-fc5969aafc30",
    "metadata": {},
    "outputs": [],
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 7,
    "id": "d5b89877-d561-45c3-bc60-f5bb465cc566",
    "metadata": {},
    "outputs": [
@@ -756,7 +756,7 @@
        " (('z', 'x'), 1)]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -767,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 8,
    "id": "b9a7ec31-36b7-4f62-b65b-7ebd7fad1559",
    "metadata": {},
    "outputs": [
@@ -777,7 +777,7 @@
        "627"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -788,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "1bd936ad-d172-4836-8ae3-79deb0615319",
    "metadata": {},
    "outputs": [],
@@ -798,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "db359a3a-0503-4498-842a-8f46a8575205",
    "metadata": {},
    "outputs": [],
@@ -808,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "e177efdb-752c-4264-849e-fc3f218c8c1a",
    "metadata": {},
    "outputs": [
@@ -844,7 +844,7 @@
        " '.': 0}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -858,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "70ec5d6c-4e8b-44e8-ac26-a93eb4b4040d",
    "metadata": {},
    "outputs": [],
@@ -873,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "93b0952a-b1a0-4009-a7d2-8c5c5ea6563c",
    "metadata": {},
    "outputs": [],
@@ -883,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "110691ee-ffbe-4ab3-aeeb-43d1ecab169a",
    "metadata": {},
    "outputs": [
@@ -913,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "d9c981c0-3fe8-4c59-b427-7f593c2c182f",
    "metadata": {},
    "outputs": [
@@ -925,7 +925,7 @@
        "         134,  535,  929], dtype=torch.int32)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -936,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 16,
    "id": "f7300f9a-bc01-4b14-ba9e-bd1c2c1ae360",
    "metadata": {},
    "outputs": [
@@ -948,7 +948,7 @@
        "        0.0512, 0.0642, 0.0408, 0.0024, 0.0117, 0.0096, 0.0042, 0.0167, 0.0290])"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -961,28 +961,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "id": "577c2cfb-8586-49f3-aa9e-408b5abbd56d",
+   "execution_count": 18,
+   "id": "4fdc872c-c6ad-4eba-91c1-5f6548a7a463",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "torch.Size([27, 1])"
+       "tensor(1.)"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "P.sum(1, keepdim=True).shape"
+    "p.sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 19,
    "id": "2c1be0b7-8b38-47a3-8d8e-7a443382b286",
    "metadata": {},
    "outputs": [
@@ -992,7 +992,7 @@
        "torch.Size([27, 27])"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1005,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 20,
    "id": "6d640219-7f86-43a9-af74-4e974729cc5a",
    "metadata": {},
    "outputs": [
@@ -1041,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "id": "8041414b-ee4b-42ff-891c-e00535d4628a",
    "metadata": {},
    "outputs": [
@@ -1094,7 +1094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "id": "5c9fcaaa-8283-40c0-9be7-4bfa6fe5bbfe",
    "metadata": {},
    "outputs": [
@@ -1127,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "id": "c653a652-b830-41d5-954a-4c2a784d1983",
    "metadata": {},
    "outputs": [
@@ -1137,7 +1137,7 @@
        "tensor([ 0,  5, 13, 13,  1])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1148,7 +1148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "id": "228da2e5-ed65-446c-a32a-950606ede06a",
    "metadata": {},
    "outputs": [
@@ -1158,7 +1158,7 @@
        "tensor([ 5, 13, 13,  1,  0])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1169,7 +1169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "id": "bffb86d7-5707-4cc9-83c4-0fd813c4e447",
    "metadata": {},
    "outputs": [
@@ -1188,7 +1188,7 @@
        "         0., 0., 0., 0., 0., 0., 0., 0., 0.]])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1201,17 +1201,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "id": "3654d852-b04f-4945-8206-f5dbc032bd23",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fc55f20ea40>"
+       "<matplotlib.image.AxesImage at 0x7ff5da217ac0>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1232,7 +1232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "id": "f240d32c-946d-4b61-826e-23746b9a69cc",
    "metadata": {},
    "outputs": [
@@ -1242,7 +1242,7 @@
        "torch.float32"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1253,46 +1253,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "id": "e7379df4-a0e7-4103-87bd-791c279bf720",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[ 6.5156e-01, -1.2769e+00, -1.1699e+00,  2.6695e-01,  1.4033e-03,\n",
-       "          8.4233e-01,  1.9788e-01, -1.2087e+00, -1.8306e-01, -5.7714e-02,\n",
-       "          3.1499e-01,  9.0484e-01,  1.2181e+00,  2.7870e-01,  2.3432e-02,\n",
-       "         -2.3228e-01,  4.9410e-01,  1.0460e+00, -5.9210e-01, -1.4514e+00,\n",
-       "          1.7510e+00,  2.3799e-01, -6.9398e-01, -9.5483e-01,  1.2609e+00,\n",
-       "          2.6685e-01, -7.7317e-03],\n",
-       "        [ 6.9226e-01, -2.9662e+00, -1.4491e+00, -7.5928e-02,  9.3945e-01,\n",
-       "          7.7671e-01, -6.3774e-01,  1.4266e+00,  2.2127e-01, -8.7976e-01,\n",
-       "          1.1860e+00, -1.5152e+00,  9.8234e-02, -1.1673e+00, -1.5670e-01,\n",
-       "         -9.8468e-01, -1.8776e-01,  4.8204e-01,  8.9479e-02, -4.9263e-01,\n",
-       "         -7.2693e-01,  1.2634e+00, -4.9384e-01,  3.0932e-01,  1.4640e+00,\n",
-       "          1.3876e+00,  5.7798e-01],\n",
-       "        [-2.2350e+00, -1.7931e-02, -8.5013e-02,  5.3828e-01, -7.5908e-01,\n",
-       "          9.2366e-01,  6.0577e-01, -2.7357e-01,  1.1819e+00, -6.6465e-02,\n",
-       "          3.1698e-01,  1.5828e+00,  5.7055e-01, -5.4271e-01,  6.8365e-01,\n",
-       "         -1.1793e+00, -1.1973e+00,  1.0212e+00,  2.6782e-01, -8.6569e-01,\n",
-       "          9.0600e-01, -8.1723e-01, -2.3953e-01,  3.8494e-01, -2.0300e-02,\n",
-       "          9.5097e-01,  6.9490e-01],\n",
-       "        [-2.2350e+00, -1.7931e-02, -8.5013e-02,  5.3828e-01, -7.5908e-01,\n",
-       "          9.2366e-01,  6.0577e-01, -2.7357e-01,  1.1819e+00, -6.6465e-02,\n",
-       "          3.1698e-01,  1.5828e+00,  5.7055e-01, -5.4271e-01,  6.8365e-01,\n",
-       "         -1.1793e+00, -1.1973e+00,  1.0212e+00,  2.6782e-01, -8.6569e-01,\n",
-       "          9.0600e-01, -8.1723e-01, -2.3953e-01,  3.8494e-01, -2.0300e-02,\n",
-       "          9.5097e-01,  6.9490e-01],\n",
-       "        [-1.1871e-01,  3.8503e-01,  6.9557e-01,  1.8077e-01,  4.4056e-01,\n",
-       "          7.2818e-02, -1.0824e-01, -2.8901e-01,  1.3518e+00,  9.4363e-01,\n",
-       "          1.2623e+00, -1.0570e-01, -2.8442e-01,  6.7113e-01,  1.8841e+00,\n",
-       "         -8.9951e-01, -9.4522e-02, -8.8394e-01, -1.5058e+00, -3.8720e-01,\n",
-       "         -5.6603e-01,  5.2378e-01,  3.8818e-01,  1.8724e-01,  4.8921e-02,\n",
-       "          5.5193e-02, -1.2612e+00]])"
+       "tensor([[ 0.1754, -0.2248,  0.1245,  1.5453,  0.4861, -1.4500, -2.5534,  1.9151,\n",
+       "         -0.6225, -0.1589, -0.7910,  1.4772, -0.7898,  0.8079,  0.1094, -0.1458,\n",
+       "          0.2723, -0.0277, -0.0648,  1.0537,  0.9874, -0.8324,  0.6951, -0.7992,\n",
+       "          0.0428, -1.2849,  0.2908],\n",
+       "        [-0.9384,  0.9207,  0.3972,  0.6162, -0.9457,  0.8667, -0.5780, -1.7454,\n",
+       "         -0.8611,  2.0816,  0.5756, -0.9480,  0.2916,  1.5924, -0.8795,  1.4932,\n",
+       "          0.9242, -0.6972, -0.4177, -0.2135,  0.2997, -0.3270, -0.8130,  0.4195,\n",
+       "          1.5162,  0.1242, -0.3526],\n",
+       "        [ 0.0035, -0.0451,  0.2231,  0.4323,  0.0415,  0.0748, -0.5051, -0.4228,\n",
+       "         -0.6581, -0.8195,  0.8079, -0.6444, -0.4481, -0.0448,  0.5339, -0.3198,\n",
+       "         -0.3150, -0.4260, -0.8719, -0.0302, -0.8505, -0.4527, -0.1507, -0.4299,\n",
+       "          0.3663, -0.5155, -0.4361],\n",
+       "        [ 0.0035, -0.0451,  0.2231,  0.4323,  0.0415,  0.0748, -0.5051, -0.4228,\n",
+       "         -0.6581, -0.8195,  0.8079, -0.6444, -0.4481, -0.0448,  0.5339, -0.3198,\n",
+       "         -0.3150, -0.4260, -0.8719, -0.0302, -0.8505, -0.4527, -0.1507, -0.4299,\n",
+       "          0.3663, -0.5155, -0.4361],\n",
+       "        [-1.0878, -0.4304,  0.7680, -0.0690,  0.5393,  0.0249, -0.3958, -1.1773,\n",
+       "         -0.5820,  0.4349, -0.7862, -1.7069,  1.9168, -1.3330,  1.1515, -1.8118,\n",
+       "         -1.0837,  1.1917, -0.6200, -0.6135, -0.9901,  0.5026,  0.0130, -0.5532,\n",
+       "          0.2230,  0.5340, -1.1255]])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1304,31 +1294,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "id": "2a43f203-1c24-4a12-93ae-86acec1f39b5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[0.0482, 0.0070, 0.0078, 0.0328, 0.0252, 0.0583, 0.0306, 0.0075, 0.0209,\n",
-       "         0.0237, 0.0344, 0.0621, 0.0849, 0.0332, 0.0257, 0.0199, 0.0412, 0.0715,\n",
-       "         0.0139, 0.0059, 0.1447, 0.0319, 0.0126, 0.0097, 0.0886, 0.0328, 0.0249],\n",
-       "        [0.0491, 0.0013, 0.0058, 0.0228, 0.0629, 0.0534, 0.0130, 0.1023, 0.0307,\n",
-       "         0.0102, 0.0805, 0.0054, 0.0271, 0.0076, 0.0210, 0.0092, 0.0204, 0.0398,\n",
-       "         0.0269, 0.0150, 0.0119, 0.0869, 0.0150, 0.0335, 0.1062, 0.0984, 0.0438],\n",
-       "        [0.0027, 0.0246, 0.0230, 0.0429, 0.0117, 0.0631, 0.0459, 0.0191, 0.0817,\n",
-       "         0.0234, 0.0344, 0.1219, 0.0443, 0.0146, 0.0496, 0.0077, 0.0076, 0.0695,\n",
-       "         0.0327, 0.0105, 0.0620, 0.0111, 0.0197, 0.0368, 0.0245, 0.0648, 0.0502],\n",
-       "        [0.0027, 0.0246, 0.0230, 0.0429, 0.0117, 0.0631, 0.0459, 0.0191, 0.0817,\n",
-       "         0.0234, 0.0344, 0.1219, 0.0443, 0.0146, 0.0496, 0.0077, 0.0076, 0.0695,\n",
-       "         0.0327, 0.0105, 0.0620, 0.0111, 0.0197, 0.0368, 0.0245, 0.0648, 0.0502],\n",
-       "        [0.0222, 0.0368, 0.0502, 0.0300, 0.0389, 0.0269, 0.0225, 0.0187, 0.0967,\n",
-       "         0.0643, 0.0885, 0.0225, 0.0188, 0.0490, 0.1647, 0.0102, 0.0228, 0.0103,\n",
-       "         0.0056, 0.0170, 0.0142, 0.0423, 0.0369, 0.0302, 0.0263, 0.0265, 0.0071]])"
+       "tensor([[0.0285, 0.0191, 0.0271, 0.1123, 0.0389, 0.0056, 0.0019, 0.1625, 0.0128,\n",
+       "         0.0204, 0.0109, 0.1049, 0.0109, 0.0537, 0.0267, 0.0207, 0.0314, 0.0233,\n",
+       "         0.0224, 0.0687, 0.0643, 0.0104, 0.0480, 0.0108, 0.0250, 0.0066, 0.0320],\n",
+       "        [0.0084, 0.0541, 0.0321, 0.0399, 0.0084, 0.0513, 0.0121, 0.0038, 0.0091,\n",
+       "         0.1729, 0.0383, 0.0084, 0.0289, 0.1060, 0.0089, 0.0960, 0.0543, 0.0107,\n",
+       "         0.0142, 0.0174, 0.0291, 0.0155, 0.0096, 0.0328, 0.0982, 0.0244, 0.0152],\n",
+       "        [0.0420, 0.0400, 0.0523, 0.0644, 0.0436, 0.0451, 0.0252, 0.0274, 0.0217,\n",
+       "         0.0184, 0.0938, 0.0220, 0.0267, 0.0400, 0.0713, 0.0304, 0.0305, 0.0273,\n",
+       "         0.0175, 0.0406, 0.0179, 0.0266, 0.0360, 0.0272, 0.0603, 0.0250, 0.0270],\n",
+       "        [0.0420, 0.0400, 0.0523, 0.0644, 0.0436, 0.0451, 0.0252, 0.0274, 0.0217,\n",
+       "         0.0184, 0.0938, 0.0220, 0.0267, 0.0400, 0.0713, 0.0304, 0.0305, 0.0273,\n",
+       "         0.0175, 0.0406, 0.0179, 0.0266, 0.0360, 0.0272, 0.0603, 0.0250, 0.0270],\n",
+       "        [0.0104, 0.0200, 0.0663, 0.0287, 0.0527, 0.0315, 0.0207, 0.0095, 0.0172,\n",
+       "         0.0475, 0.0140, 0.0056, 0.2090, 0.0081, 0.0972, 0.0050, 0.0104, 0.1012,\n",
+       "         0.0165, 0.0166, 0.0114, 0.0508, 0.0311, 0.0177, 0.0384, 0.0524, 0.0100]])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1342,7 +1332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "id": "95f1cb80-6e2c-4c64-8417-e10dbbbb3ebe",
    "metadata": {},
    "outputs": [],
@@ -1354,7 +1344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "id": "25066ccf-65eb-49e6-8295-f05327ba355f",
    "metadata": {},
    "outputs": [],
@@ -1370,7 +1360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "id": "3cb79aeb-e8d1-4211-9845-62f42d3e3927",
    "metadata": {},
    "outputs": [
@@ -1388,7 +1378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "id": "01ad22ae-941e-4927-950c-f895f7625eaa",
    "metadata": {},
    "outputs": [],
@@ -1400,7 +1390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 34,
    "id": "58b43cf8-81cf-4887-8e6a-f177e3f643f9",
    "metadata": {},
    "outputs": [],
@@ -1411,7 +1401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 35,
    "id": "fa237d8d-536c-437f-8de3-d471e649b3c1",
    "metadata": {},
    "outputs": [
@@ -1421,7 +1411,7 @@
        "torch.Size([5, 27])"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1432,7 +1422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 36,
    "id": "0ddaab55-3de5-42aa-91e4-0b5cd1bb5a57",
    "metadata": {},
    "outputs": [
@@ -1525,7 +1515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 37,
    "id": "6396bdd0-6cae-49a9-be01-26819f1e4b40",
    "metadata": {},
    "outputs": [],
@@ -1535,7 +1525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 38,
    "id": "76d0a7a1-fa99-4f1c-8972-9f50cbe18c69",
    "metadata": {},
    "outputs": [
@@ -1569,7 +1559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 39,
    "id": "e1f82407-1606-4b39-809b-e5b436b2fb8d",
    "metadata": {},
    "outputs": [
@@ -1579,7 +1569,7 @@
        "torch.Size([228146])"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1590,7 +1580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 40,
    "id": "f8317a40-369a-4c2b-beb9-b0f00afa2654",
    "metadata": {},
    "outputs": [
@@ -1600,7 +1590,7 @@
        "tensor(0.9665, grad_fn=<MeanBackward0>)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1611,7 +1601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 41,
    "id": "41eda069-d01c-4c4e-8e9a-d573c21d54c0",
    "metadata": {},
    "outputs": [
@@ -1619,7 +1609,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.7686190605163574\n"
+      "3.768618583679199\n"
      ]
     }
    ],
@@ -1645,7 +1635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 42,
    "id": "0e0cce48-e2eb-4fe0-9289-8feb3b48a092",
    "metadata": {},
    "outputs": [
