--- a/bigram2.ipynb
+++ b/bigram2.ipynb
@@ -961,7 +961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "4fdc872c-c6ad-4eba-91c1-5f6548a7a463",
    "metadata": {},
    "outputs": [
@@ -971,7 +971,7 @@
        "tensor(1.)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -982,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "2c1be0b7-8b38-47a3-8d8e-7a443382b286",
    "metadata": {},
    "outputs": [
@@ -992,7 +992,7 @@
        "torch.Size([27, 27])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1005,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "6d640219-7f86-43a9-af74-4e974729cc5a",
    "metadata": {},
    "outputs": [
@@ -1041,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "8041414b-ee4b-42ff-891c-e00535d4628a",
    "metadata": {},
    "outputs": [
@@ -1094,7 +1094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "5c9fcaaa-8283-40c0-9be7-4bfa6fe5bbfe",
    "metadata": {},
    "outputs": [
@@ -1127,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "c653a652-b830-41d5-954a-4c2a784d1983",
    "metadata": {},
    "outputs": [
@@ -1137,7 +1137,7 @@
        "tensor([ 0,  5, 13, 13,  1])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1148,7 +1148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "228da2e5-ed65-446c-a32a-950606ede06a",
    "metadata": {},
    "outputs": [
@@ -1158,7 +1158,7 @@
        "tensor([ 5, 13, 13,  1,  0])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1169,7 +1169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "id": "bffb86d7-5707-4cc9-83c4-0fd813c4e447",
    "metadata": {},
    "outputs": [
@@ -1188,7 +1188,7 @@
        "         0., 0., 0., 0., 0., 0., 0., 0., 0.]])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1201,17 +1201,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "id": "3654d852-b04f-4945-8206-f5dbc032bd23",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7ff5da217ac0>"
+       "<matplotlib.image.AxesImage at 0x7f3dbdc91a20>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1232,7 +1232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "id": "f240d32c-946d-4b61-826e-23746b9a69cc",
    "metadata": {},
    "outputs": [
@@ -1242,7 +1242,7 @@
        "torch.float32"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1253,36 +1253,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "id": "e7379df4-a0e7-4103-87bd-791c279bf720",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[ 0.1754, -0.2248,  0.1245,  1.5453,  0.4861, -1.4500, -2.5534,  1.9151,\n",
-       "         -0.6225, -0.1589, -0.7910,  1.4772, -0.7898,  0.8079,  0.1094, -0.1458,\n",
-       "          0.2723, -0.0277, -0.0648,  1.0537,  0.9874, -0.8324,  0.6951, -0.7992,\n",
-       "          0.0428, -1.2849,  0.2908],\n",
-       "        [-0.9384,  0.9207,  0.3972,  0.6162, -0.9457,  0.8667, -0.5780, -1.7454,\n",
-       "         -0.8611,  2.0816,  0.5756, -0.9480,  0.2916,  1.5924, -0.8795,  1.4932,\n",
-       "          0.9242, -0.6972, -0.4177, -0.2135,  0.2997, -0.3270, -0.8130,  0.4195,\n",
-       "          1.5162,  0.1242, -0.3526],\n",
-       "        [ 0.0035, -0.0451,  0.2231,  0.4323,  0.0415,  0.0748, -0.5051, -0.4228,\n",
-       "         -0.6581, -0.8195,  0.8079, -0.6444, -0.4481, -0.0448,  0.5339, -0.3198,\n",
-       "         -0.3150, -0.4260, -0.8719, -0.0302, -0.8505, -0.4527, -0.1507, -0.4299,\n",
-       "          0.3663, -0.5155, -0.4361],\n",
-       "        [ 0.0035, -0.0451,  0.2231,  0.4323,  0.0415,  0.0748, -0.5051, -0.4228,\n",
-       "         -0.6581, -0.8195,  0.8079, -0.6444, -0.4481, -0.0448,  0.5339, -0.3198,\n",
-       "         -0.3150, -0.4260, -0.8719, -0.0302, -0.8505, -0.4527, -0.1507, -0.4299,\n",
-       "          0.3663, -0.5155, -0.4361],\n",
-       "        [-1.0878, -0.4304,  0.7680, -0.0690,  0.5393,  0.0249, -0.3958, -1.1773,\n",
-       "         -0.5820,  0.4349, -0.7862, -1.7069,  1.9168, -1.3330,  1.1515, -1.8118,\n",
-       "         -1.0837,  1.1917, -0.6200, -0.6135, -0.9901,  0.5026,  0.0130, -0.5532,\n",
-       "          0.2230,  0.5340, -1.1255]])"
+       "tensor([[-0.2648,  0.0379, -0.1604, -0.9666, -1.5102, -1.3670, -1.7019,  0.8477,\n",
+       "          0.5346,  0.3951, -0.4282,  0.5208, -0.1621,  0.9758, -1.4568,  0.1908,\n",
+       "          0.5303,  1.1507, -0.9339,  2.2494,  0.4863, -0.1733,  0.4198, -0.3732,\n",
+       "          0.1717,  0.7193,  1.1859],\n",
+       "        [ 0.0492, -0.1301,  0.0940, -0.1103,  0.5315,  0.8619,  0.9821, -0.3635,\n",
+       "         -0.2302, -0.8613, -2.0862, -0.6146,  0.1326, -0.1742,  0.0399, -1.1745,\n",
+       "          0.5150,  0.5673, -0.5790, -0.6705, -1.1276,  0.9435, -0.6173, -1.0669,\n",
+       "          0.1426, -0.3091, -1.3070],\n",
+       "        [ 1.1986, -0.3579, -0.4078,  0.6292,  0.4769,  0.6256, -0.7678, -0.2357,\n",
+       "          0.8741, -0.4662,  0.1270, -0.3516, -1.3440, -2.1256,  1.3054, -1.7081,\n",
+       "         -0.3032,  1.1160,  0.8665,  0.0778,  0.5894, -0.7846,  1.6464, -1.2520,\n",
+       "          0.9153,  0.2485,  2.6753],\n",
+       "        [ 1.1986, -0.3579, -0.4078,  0.6292,  0.4769,  0.6256, -0.7678, -0.2357,\n",
+       "          0.8741, -0.4662,  0.1270, -0.3516, -1.3440, -2.1256,  1.3054, -1.7081,\n",
+       "         -0.3032,  1.1160,  0.8665,  0.0778,  0.5894, -0.7846,  1.6464, -1.2520,\n",
+       "          0.9153,  0.2485,  2.6753],\n",
+       "        [-1.4713,  1.4657, -0.7409,  2.4831,  0.5082, -1.4157, -0.9779, -1.5838,\n",
+       "         -0.7431,  0.0461,  0.1165, -1.2030,  1.0934,  0.3224,  0.4364,  0.2658,\n",
+       "          0.2618,  1.1193, -0.3546, -1.1224, -0.1498, -1.0602, -1.8714,  1.1603,\n",
+       "          0.8992,  0.4905, -0.5878]])"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1294,31 +1294,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "id": "2a43f203-1c24-4a12-93ae-86acec1f39b5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[0.0285, 0.0191, 0.0271, 0.1123, 0.0389, 0.0056, 0.0019, 0.1625, 0.0128,\n",
-       "         0.0204, 0.0109, 0.1049, 0.0109, 0.0537, 0.0267, 0.0207, 0.0314, 0.0233,\n",
-       "         0.0224, 0.0687, 0.0643, 0.0104, 0.0480, 0.0108, 0.0250, 0.0066, 0.0320],\n",
-       "        [0.0084, 0.0541, 0.0321, 0.0399, 0.0084, 0.0513, 0.0121, 0.0038, 0.0091,\n",
-       "         0.1729, 0.0383, 0.0084, 0.0289, 0.1060, 0.0089, 0.0960, 0.0543, 0.0107,\n",
-       "         0.0142, 0.0174, 0.0291, 0.0155, 0.0096, 0.0328, 0.0982, 0.0244, 0.0152],\n",
-       "        [0.0420, 0.0400, 0.0523, 0.0644, 0.0436, 0.0451, 0.0252, 0.0274, 0.0217,\n",
-       "         0.0184, 0.0938, 0.0220, 0.0267, 0.0400, 0.0713, 0.0304, 0.0305, 0.0273,\n",
-       "         0.0175, 0.0406, 0.0179, 0.0266, 0.0360, 0.0272, 0.0603, 0.0250, 0.0270],\n",
-       "        [0.0420, 0.0400, 0.0523, 0.0644, 0.0436, 0.0451, 0.0252, 0.0274, 0.0217,\n",
-       "         0.0184, 0.0938, 0.0220, 0.0267, 0.0400, 0.0713, 0.0304, 0.0305, 0.0273,\n",
-       "         0.0175, 0.0406, 0.0179, 0.0266, 0.0360, 0.0272, 0.0603, 0.0250, 0.0270],\n",
-       "        [0.0104, 0.0200, 0.0663, 0.0287, 0.0527, 0.0315, 0.0207, 0.0095, 0.0172,\n",
-       "         0.0475, 0.0140, 0.0056, 0.2090, 0.0081, 0.0972, 0.0050, 0.0104, 0.1012,\n",
-       "         0.0165, 0.0166, 0.0114, 0.0508, 0.0311, 0.0177, 0.0384, 0.0524, 0.0100]])"
+       "tensor([[0.0181, 0.0245, 0.0201, 0.0090, 0.0052, 0.0060, 0.0043, 0.0550, 0.0402,\n",
+       "         0.0350, 0.0154, 0.0397, 0.0200, 0.0625, 0.0055, 0.0285, 0.0401, 0.0745,\n",
+       "         0.0093, 0.2235, 0.0383, 0.0198, 0.0359, 0.0162, 0.0280, 0.0484, 0.0772],\n",
+       "        [0.0389, 0.0325, 0.0407, 0.0332, 0.0630, 0.0876, 0.0988, 0.0257, 0.0294,\n",
+       "         0.0156, 0.0046, 0.0200, 0.0423, 0.0311, 0.0385, 0.0114, 0.0620, 0.0653,\n",
+       "         0.0207, 0.0189, 0.0120, 0.0951, 0.0200, 0.0127, 0.0427, 0.0272, 0.0100],\n",
+       "        [0.0618, 0.0130, 0.0124, 0.0349, 0.0300, 0.0348, 0.0086, 0.0147, 0.0446,\n",
+       "         0.0117, 0.0212, 0.0131, 0.0049, 0.0022, 0.0687, 0.0034, 0.0138, 0.0569,\n",
+       "         0.0443, 0.0201, 0.0336, 0.0085, 0.0966, 0.0053, 0.0465, 0.0239, 0.2704],\n",
+       "        [0.0618, 0.0130, 0.0124, 0.0349, 0.0300, 0.0348, 0.0086, 0.0147, 0.0446,\n",
+       "         0.0117, 0.0212, 0.0131, 0.0049, 0.0022, 0.0687, 0.0034, 0.0138, 0.0569,\n",
+       "         0.0443, 0.0201, 0.0336, 0.0085, 0.0966, 0.0053, 0.0465, 0.0239, 0.2704],\n",
+       "        [0.0052, 0.0979, 0.0108, 0.2707, 0.0376, 0.0055, 0.0085, 0.0046, 0.0107,\n",
+       "         0.0237, 0.0254, 0.0068, 0.0674, 0.0312, 0.0350, 0.0295, 0.0294, 0.0692,\n",
+       "         0.0159, 0.0074, 0.0195, 0.0078, 0.0035, 0.0721, 0.0555, 0.0369, 0.0126]])"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1332,7 +1332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "id": "95f1cb80-6e2c-4c64-8417-e10dbbbb3ebe",
    "metadata": {},
    "outputs": [],
@@ -1344,7 +1344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "id": "25066ccf-65eb-49e6-8295-f05327ba355f",
    "metadata": {},
    "outputs": [],
@@ -1360,7 +1360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "id": "3cb79aeb-e8d1-4211-9845-62f42d3e3927",
    "metadata": {},
    "outputs": [
@@ -1378,7 +1378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "id": "01ad22ae-941e-4927-950c-f895f7625eaa",
    "metadata": {},
    "outputs": [],
@@ -1390,18 +1390,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "id": "58b43cf8-81cf-4887-8e6a-f177e3f643f9",
    "metadata": {},
    "outputs": [],
    "source": [
     "# update\n",
-    "W.data += -0.1 * W.grad"
+    "W.data += -5 * W.grad"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "id": "fa237d8d-536c-437f-8de3-d471e649b3c1",
    "metadata": {},
    "outputs": [
@@ -1411,7 +1411,7 @@
        "torch.Size([5, 27])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1422,7 +1422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "id": "0ddaab55-3de5-42aa-91e4-0b5cd1bb5a57",
    "metadata": {},
    "outputs": [
@@ -1515,7 +1515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 36,
    "id": "6396bdd0-6cae-49a9-be01-26819f1e4b40",
    "metadata": {},
    "outputs": [],
@@ -1525,7 +1525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 37,
    "id": "76d0a7a1-fa99-4f1c-8972-9f50cbe18c69",
    "metadata": {},
    "outputs": [
@@ -1559,7 +1559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 38,
    "id": "e1f82407-1606-4b39-809b-e5b436b2fb8d",
    "metadata": {},
    "outputs": [
@@ -1569,7 +1569,7 @@
        "torch.Size([228146])"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1580,7 +1580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 39,
    "id": "f8317a40-369a-4c2b-beb9-b0f00afa2654",
    "metadata": {},
    "outputs": [
@@ -1590,7 +1590,7 @@
        "tensor(0.9665, grad_fn=<MeanBackward0>)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1601,7 +1601,50 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 40,
+   "id": "2aa5f5fd-73fd-4460-b84f-11e72ef3f93a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([228146, 27])"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xenc = F.one_hot(xs, num_classes=27).float()\n",
+    "xenc.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 41,
+   "id": "b6ae9f2b-6c78-477e-9dae-493ba9837148",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([228146, 27])"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(xenc @ W).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "id": "41eda069-d01c-4c4e-8e9a-d573c21d54c0",
    "metadata": {},
    "outputs": [
@@ -1609,7 +1652,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.768618583679199\n"
+      "3.7686190605163574\n"
      ]
     }
    ],
@@ -1635,7 +1678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "id": "0e0cce48-e2eb-4fe0-9289-8feb3b48a092",
    "metadata": {},
    "outputs": [
